--- a/config/config.json
+++ b/config/config.json
@@ -1,25 +1,24 @@
 {
     "development": {
-      "username": "root",
-      "password": "root",
-      "database": "todolist2",
-      "host": "localhost",
+      "username": "qvho5crgvmpfgc82",
+      "password": "hcajzqb4x37qx8o8",
+      "database": "yy1l8m3jl6ryyc9h",
+      "host": "dyud5fa2qycz1o3v.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
       "port": 3306,
       "dialect": "mysql"
     },
     "test": {
-      "username": "root",
-      "password": null,
-      "database": "database_test",
-      "host": "127.0.0.1",
+      "username": "qvho5crgvmpfgc82",
+      "password": "hcajzqb4x37qx8o8",
+      "database": "yy1l8m3jl6ryyc9h",
+      "host": "dyud5fa2qycz1o3v.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
       "dialect": "mysql"
     },
     "production": {
-      "username": "root",
-      "password": null,
-      "database": "database_production",
-      "host": "127.0.0.1",
+      "username": "qvho5crgvmpfgc82",
+      "password": "hcajzqb4x37qx8o8",
+      "database": "yy1l8m3jl6ryyc9h",
+      "host": "dyud5fa2qycz1o3v.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
       "dialect": "mysql"
     }
   }
-  
